tests/baselines/reference/multiExtendsSplitInterfaces1.errors.txt
tests/cases/compiler/multiExtendsSplitInterfaces1.ts(1,1): error TS2304: Cannot find name 'self'.


==== tests/cases/compiler/multiExtendsSplitInterfaces1.ts (1 errors) ====
    self.cancelAnimationFrame(0);
    ~~~~
!!! error TS2304: Cannot find name 'self'.